added main html section

--- a/Index.html
+++ b/Index.html
@@ -5,12 +5,108 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
-      <link
-      rel="stylesheet"
-      href="./style.css"
     />
-    />
+    <link rel="stylesheet" href="./CSS/style.css" />
     <title>M Tank's Portfolio | FrontEnd Web Developer</title>
   </head>
-  <body></body>
+  <body>
+    <!-- Top main NavBar -->
+
+    <ul class="navbar">
+      <li class="nav-item">
+        <a class="nav-link active" href="#">Projects</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Skills</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">About Me</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Contact Me</a>
+      </li>
+    </ul>
+
+    <!-- Hero Section -->
+
+    <div class="herosection">
+      <div class="containerhero">
+        <div class="row">
+          <div class="col-sm-8">
+            <h1 class="display-4">Mamta Tank</h1>
+            <p class="lead">
+              FrontEnd Web Developer with experience of working on Projects
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="avatar">
+              <img src="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Work Section -->
+
+    <div class="cardprojects">
+      <div class="card">
+        <img
+          class="card-img-CSS"
+          src="https://placehold.co/600x400"
+          alt="CSS CheatSheet"
+        />
+        <div class="card-body">
+          <h5 class="card-title">CSS Cheat Sheet</h5>
+          <p class="card-text">FlexBox, HTML, CSS</p>
+        </div>
+      </div>
+      <div class="card">
+        <img
+          class="card-img-Furniture"
+          src="https://placehold.co/600x400"
+          alt="Online Furniture Store"
+        />
+        <div class="card-body">
+          <h5 class="card-title">Online Furniture Store</h5>
+          <p class="card-text">Grid, HTML, CSS</p>
+        </div>
+      </div>
+      <div class="card">
+        <img
+          class="card-img-Jakes"
+          src="https://placehold.co/600x400"
+          alt="Jake's Eatery"
+        />
+        <div class="card-body">
+          <h5 class="card-title">Jake's Eatery</h5>
+          <p class="card-text">Grid, HTML, CSS</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Skills Section -->
+    <div class="skillsList">
+      <ul class="skills">
+        <h1>Skills</h1>
+        <li>
+          Able to create a website from scratch with HTML, CSS and Javascript
+        </li>
+        <li>Able to create custom webpages as per requirement</li>
+        <li>
+          Able to deploy a website from start to finish and maintain in future
+        </li>
+      </ul>
+    </div>
+
+    <!-- About / Contact Section -->
+
+    <div class="aboutContact">
+      <div class="abtcontactsec">
+        <div class="linkedin"></div>
+      </div>
+    </div>
+  </body>
 </html>
