--- a/Index.html
+++ b/Index.html
@@ -6,90 +6,109 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Anton|Jura&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./CSS/style.css" />
     <title>M Tank's Portfolio | FrontEnd Web Developer</title>
   </head>
   <body>
     <!-- Top main NavBar -->
 
-    <ul class="navbar">
-      <li class="nav-item">
-        <a class="nav-link active" href="#">Projects</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Skills</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">About Me</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Contact Me</a>
-      </li>
-    </ul>
+    <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
+      <ul class="navBar mx-auto d-flex w-90 justify-content-end">
+        <li class="nav-item active">
+          <a class="nav-link" href="#projects">Projects</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#sKills">Skills</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#aboutme">About Me </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#contact">Contact Me</a>
+        </li>
+      </ul>
+    </nav>
 
     <!-- Hero Section -->
 
-    <div class="herosection">
-      <div class="containerhero">
-        <div class="row">
-          <div class="col-sm-8">
-            <h1 class="display-4">Mamta Tank</h1>
-            <p class="lead">
-              FrontEnd Web Developer with experience of working on Projects
-            </p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-4">
-            <div class="avatar">
-              <img src="" />
-            </div>
-          </div>
-        </div>
-      </div>
+    <div class="heroSection">
+      <img src="images/Profile.jpg" />
+      <aside>
+        <h1 class="herotitle">Mamta Tank</h1>
+        <h2 class="heroSubtitle">FrontEnd Web Developer</h2>
+      </aside>
     </div>
 
     <!-- Work Section -->
 
-    <div class="cardprojects">
-      <div class="card">
-        <img
-          class="card-img-CSS"
-          src="https://placehold.co/600x400"
-          alt="CSS CheatSheet"
-        />
-        <div class="card-body">
-          <h5 class="card-title">CSS Cheat Sheet</h5>
-          <p class="card-text">FlexBox, HTML, CSS</p>
+    <div class="container">
+      <div id="projects" class="d-flex flex-wrap justify-content-between">
+        <div class="card">
+          <a
+            href="https://tankmamta.github.io/CSS-Snippet-Cheatsheet-mini-project/"
+            target="_blank"
+          >
+            <img
+              class="card-img-top"
+              src="./images/CSS-CheatSheet.png"
+              alt="Card image cap"
+          /></a>
+          <div class="card-body">
+            <a
+              href="https://github.com/tankmamta/CSS-Snippet-Cheatsheet-mini-projectc"
+              class="card-title"
+              >CSS Cheat Sheet - GitHub</a
+            >
+            <p class="card-text">FlexBox, HTML, CSS</p>
+          </div>
         </div>
-      </div>
-      <div class="card">
-        <img
-          class="card-img-Furniture"
-          src="https://placehold.co/600x400"
-          alt="Online Furniture Store"
-        />
-        <div class="card-body">
-          <h5 class="card-title">Online Furniture Store</h5>
-          <p class="card-text">Grid, HTML, CSS</p>
+        <div class="card">
+          <a
+            href="https://tankmamta.github.io/Online-Furniture-Store/"
+            target="_blank"
+          >
+          <img
+            class="card-img-top"
+            src="./images/Online-FurnitureStore.png"
+            alt="Card image cap"
+          />
+          <div class="card-body">
+            <a href="https://github.com/tankmamta/Online-Furniture-Store" class="card-title">Online Furniture Store - GitHub</a>
+            <p class="card-text">Grid, HTML, CSS</p>
+          </div>
         </div>
-      </div>
-      <div class="card">
-        <img
-          class="card-img-Jakes"
-          src="https://placehold.co/600x400"
-          alt="Jake's Eatery"
-        />
-        <div class="card-body">
-          <h5 class="card-title">Jake's Eatery</h5>
-          <p class="card-text">Grid, HTML, CSS</p>
+
+        <div class="card">
+          <a
+          href="https://tankmamta.github.io/Jake-s-Eatery/"
+          target="_blank"
+        >
+          <img
+            class="card-img-top"
+            src="./images/jake's-eatery-solution.png"
+            alt="Card image cap"
+          />
+          <div class="card-body">
+            <a href="https://github.com/tankmamta/Jake-s-Eatery" class="card-title">Jake's Eatery - GitHub</a>
+            <p class="card-text">Grid, HTML, CSS</p>
+          </div>
         </div>
       </div>
     </div>
 
     <!-- Skills Section -->
-    <div class="skillsList">
-      <ul class="skills">
+    <div class="container">
+      <ul class="skills" id="sKills">
         <h1>Skills</h1>
         <li>
           Able to create a website from scratch with HTML, CSS and Javascript
@@ -103,10 +122,44 @@
 
     <!-- About / Contact Section -->
 
-    <div class="aboutContact">
-      <div class="abtcontactsec">
-        <div class="linkedin"></div>
+    <div class="container">
+      <div id="aboutme" class="abtcontactsec">
+        <h1>About Me</h1>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry. Lorem Ipsum has been the industry's standard dummy text ever
+          since the 1500s, when an unknown printer took a galley of type and
+          scrambled it to make a type specimen book. It has survived not only
+          five centuries, but also the leap into electronic typesetting,
+          remaining essentially unchanged
+        </p>
       </div>
     </div>
+
+    <footer class="m-5 p-4">
+      <div class="contactMe" id="contact">
+        <div class="contactInfo d-flex flex-wrap justify-content-between">
+          <h6><a target="_blank" href="#">LinkedIn</a></h6>
+          <a target="_blank" href="https://github.com/tankmamta">GitHub</a>
+          <a href="mailto:tankmamta@aol.com">Email</a>
+        </div>
+      </div>
+    </footer>
+
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
